src/pydocstyle/snapshots/ruff__pydocstyle__tests__D419_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind: NonEmpty
  location:
    row: 20
    column: 8
  end_location:
    row: 20
    column: 14
  fix: ~
  parent: ~
- kind: NonEmpty
  location:
    row: 74
    column: 4
  end_location:
    row: 74
    column: 11
  fix: ~
  parent: ~
- kind: NonEmpty
  location:
    row: 80
    column: 8
  end_location:
    row: 80
    column: 10
  fix: ~
  parent: ~

