src/pydocstyle/snapshots/ruff__pydocstyle__tests__d417_unspecified.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    DocumentAllArguments:
      - y
      - z
  location:
    row: 27
    column: 0
  end_location:
    row: 36
    column: 12
  fix: ~
  parent: ~
- kind:
    DocumentAllArguments:
      - y
  location:
    row: 65
    column: 0
  end_location:
    row: 74
    column: 12
  fix: ~
  parent: ~
- kind:
    DocumentAllArguments:
      - y
  location:
    row: 77
    column: 0
  end_location:
    row: 84
    column: 12
  fix: ~
  parent: ~
- kind:
    DocumentAllArguments:
      - x
  location:
    row: 98
    column: 0
  end_location:
    row: 105
    column: 12
  fix: ~
  parent: ~
- kind:
    DocumentAllArguments:
      - "*args"
  location:
    row: 108
    column: 0
  end_location:
    row: 115
    column: 12
  fix: ~
  parent: ~

